syntax = "proto3";

import "github.com/pku-hit/libresp/msg-response.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/struct.proto";

package proto;

service Dict {
    rpc ListRoot (google.protobuf.Empty) returns (libresp.ListResponse) {}
    rpc ListChildren (google.protobuf.StringValue) returns (libresp.ListResponse) {}
    rpc AddDict (AddDictRequest) returns (libresp.Response) {}
    rpc DelDict (google.protobuf.StringValue) returns (libresp.Response) {}
    rpc GetValue (google.protobuf.StringValue) returns (libresp.GenericResponse) {}
}

enum DictType {
    Root = 0;
    Group = 1;
    Node = 2;
}

enum DictStatus {
    Normal = 0;
    Deleted = 1;
}

message DictItem {
    string dictUniqueId = 1;
    string code = 2;
    string name = 3;
    DictType type = 4;
    DictStatus status = 5;
    google.protobuf.Struct value = 6;
}

message AddDictRequest {
    string parentId = 1;
    DictType type = 2;
    string code = 3;
    string name = 4;
    google.protobuf.Value value = 5;
}